--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Adrin's Dat-En Website
+title: Adrin's Web
 
 # Your name to show in the footer
 author: Some Person
