--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: Adrin's Web
 
 # Your name to show in the footer
-author: Some Person
+author: Adrin Fabiorenski Wijaya
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -89,8 +89,7 @@ rss-description: This website is a virtual proof that I'm awesome
 share-links-active:
   twitter: true
   linkedin: true
-  vk: false
-  reddit: false
+  
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
