--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author: Adrin Fabiorenski Wijaya
 
 navbar-links:
   About Me: "aboutme"
-  Work Experience: "Work Experience"
+  Work Experience: "workexperience"
   Author's home: "https://adrinfw.github.io/"
 
 ################
@@ -89,7 +89,7 @@ rss-description: This website is a virtual proof that I'm awesome
 share-links-active:
   twitter: true
   linkedin: true
-  
+
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
