edited github authors

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author: Adrin Fabiorenski Wijaya
 navbar-links:
   About Me: "aboutme"
   Work Experience: "workexperience"
-  Author's home: "https://adrinfw.github.io/"
+  Author's home: "adrinfw.github.io"
 
 ################
 # --- Logo --- #
