add education section

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ author: Adrin Fabiorenski Wijaya
 navbar-links:
   About Me: "aboutme"
   Work Experience: "workexperience"
+  Education: "education"
   Author's home: "adrinfw.github.io"
 
 ################
