--- a/_config.yml
+++ b/_config.yml
@@ -51,10 +51,10 @@ navbar-links:
 social-network-links:
   email: "adrinfabiorenski@gmail.com"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  github: "https://github.com/adrinfw"
+  github: "adrinfw"
 #  medium: yourname
 #  reddit: yourname or r/yoursubreddit
-  linkedin: "https://www.linkedin.com/in/adrin-fabiorenski-wijaya/" 
+  linkedin: "adrin-fabiorenski-wijaya/" 
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
